[tool.poetry]
name = "arkive"
version = "0.4.0-alpha.0"
description = "Automate the management of your audio library."
authors = ["Orlando Ospino Sánchez <oroschz@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oroschz/arkive"

[tool.poetry.dependencies]
python = "^3.7"
tinytag = "^1.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
